# catpet

./: Cargo.toml
assets/: CREDITS.md
docs/superpowers/plans/: 2026-07-06-character-switching.md
docs/superpowers/specs/: 2026-07-06-character-switching-design.md
src/: config.rs  font.rs  input.rs  ipc.rs  main.rs  menu.rs  render.rs  sound.rs  sprite.rs  state.rs  timers.rs
