[package]
name = "catpet"
version = "0.1.0"
edition = "2021"
description = "A ComNyang-style desktop cat pet that reacts to your mouse, keyboard and scroll, runs a Pomodoro, nudges you to stretch, and meows when Claude Code finishes."

[[bin]]
name = "catpet"
path = "src/main.rs"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
rdev = "0.5"
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
strip = true
