[package]
name = "pixelpal"
version = "0.1.0"
edition = "2021"
description = "A desktop pixel-pal that reacts to your mouse, keyboard and scroll, runs a Pomodoro, nudges you to stretch, and cheers when Claude Code finishes. Ships a pixel cat and Rick."

[[bin]]
name = "pixelpal"
path = "src/main.rs"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
rdev = "0.5"
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
strip = true
